Fixed cart page overflowing

--- a/src/app/shop/cart/cart.component.scss
+++ b/src/app/shop/cart/cart.component.scss
@@ -23,6 +23,10 @@ section {
             visibility: hidden;
             position: absolute;
         }
+
+        li {
+            position: relative;
+        }
     }
 
     .menu {
